Made primary color (inherit from material design theme) customisable. Fixed recent matches not showing up on xs-devices.

--- a/app/styles/inc/_colors.scss
+++ b/app/styles/inc/_colors.scss
@@ -11,6 +11,7 @@ $weapons-background: #ECEFF1;
 $header-bg: $main-dark;
 $footer-bg: $main-dark;
 $player-card: #fcfcfc;
+$primary: #2196F3;
 
 $perk-background: #78909C;
 $hazard-background: #F44336;
